--- a/AutoDocApi/AutoDocApi/appsettings.Development.json
+++ b/AutoDocApi/AutoDocApi/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "AutoDocConnectionString": "Server=tcp: 192.168.1.66, 1433;Database=AutoDoc;Trusted_Connection=False;MultipleActiveResultSets=false;User ID=test;Password=test"
   }
 }
