--- a/AutoDocApi/AutoDocApi/appsettings.json
+++ b/AutoDocApi/AutoDocApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AutoDocConnectionString": "Server=tcp: 192.168.1.66, 1433;Database=AutoDoc;Trusted_Connection=False;MultipleActiveResultSets=false;User ID=test;Password=test"
+  }
 }
